--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,11 +1,57 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<head>
+	<title>SoMa</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap.css" />
+</head>
+<body>
+
+	<div id="header">
+		Header Content
+	</div>
+
+	<div class="container">
+		
+		<div id="left-side-widget">
+			Left Side Widget Content
+		</div>
+		
+		<div id="front-content">
+
+			<div id="logo">
+				SoMa logo
+			</div>
+
+			<div id="search">
+  				<form class="search-box">
+  					<label class="control-label" for="focusedInput">Focused input</label>
+  					<input class="form-control" id="focusedInput" type="text" value="This is focused...">
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+			</div>
+
+			<div id="short-description">
+				Short Description
+			</div>
+
+		</div>
+
+		<div id="right-side-widget">
+			Right Side Widget Content
+		</div>
+
+	</div>	
+
+	<div id="footer">
+
+		<div id="credentials">
+			Credentials
+		</div>
+
+		<div id="navigation-links">
+			Navigation liks
+		</div>
+
+	</div>
+
+</body>
+<html>
