--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,57 +1,91 @@
 <html>
 <head>
 	<title>SoMa</title>
-	<link rel="stylesheet" type="text/css" href="bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
 </head>
 <body>
 
-	<div id="header">
-		Header Content
-	</div>
+<div class="navbar navbar-default">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">SoMa</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Active</a></li>
+            <li><a href="#">Link</a></li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
 
 	<div class="container">
-		
-		<div id="left-side-widget">
-			Left Side Widget Content
-		</div>
-		
-		<div id="front-content">
 
-			<div id="logo">
-				SoMa logo
-			</div>
+            <div id="left-side-widget">
+                Left Side Widget Content
+            </div>
 
-			<div id="search">
-  				<form class="search-box">
-  					<label class="control-label" for="focusedInput">Focused input</label>
-  					<input class="form-control" id="focusedInput" type="text" value="This is focused...">
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
+            <div id="front-content">
 
-			<div id="short-description">
-				Short Description
-			</div>
+                <div id="logo">
+                    SoMa logo
+                </div>
 
-		</div>
+                <div class="clear"></div>
 
-		<div id="right-side-widget">
-			Right Side Widget Content
-		</div>
+                <div id="search">
+                    <form id="search-box">
+                        <input class="form-control" id="focusedInput" type="text" value="This is focused...">
+                        <button type="submit" class="btn btn-primary">Mash-Up</button>
+                    </form>
+                </div>
 
-	</div>	
+                <div class="clear"></div>
 
-	<div id="footer">
+                <div id="short-description">
+                    <p>Short Description</p>
+                </div>
 
-		<div id="credentials">
-			Credentials
-		</div>
+            </div>
 
-		<div id="navigation-links">
-			Navigation liks
-		</div>
+            <div id="right-side-widget">
+                Right Side Widget Content
+            </div>
 
 	</div>
+
+    <div class="clear"></div>
+
+    <footer>
+
+            <div id="credentials">
+                Credentials
+            </div>
+
+            <div id="navigation-links">
+                Navigation liks
+            </div>
+
+    </footer>
 
 </body>
 <html>
