Responsive Grid Template For SearchBox

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,8 +54,14 @@
 
                 <div id="search">
                     <form id="search-box">
-                        <input class="form-control" id="focusedInput" type="text" value="This is focused...">
-                        <button type="submit" class="btn btn-primary">Mash-Up</button>
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <input class="form-control" id="focusedInput" type="text" value="This is focused...">
+                             </div>
+                            <div class="col-sm-2">
+                                <button type="submit" class="btn btn-primary">Mash-Up</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
 
