--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>SoMa</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
 </head>
 <body>
 
