SoMa Design Done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,18 +17,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SoMa</a>
+        <a class="navbar-brand" href="index.html">soma</a>
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Active</a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="search-results.html">Mashup</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
+            <li><a href="#">Hello, User</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -44,13 +44,22 @@
 	<div class="container">
 
             <div id="left-side-widget">
-                Left Side Widget Content
+                <div class="panel panel-default">
+                    <div class="panel-heading">Hottest stories</div>
+                    <div class="panel-body">
+
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <a href="#">Read More...</a>
+                        <br/><br/>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." <a href="#">Read More...</a>
+                        <br/><br/>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totamipsum dolor . <a href="#">Read More...</a>
+                    </div>
+                </div>
             </div>
 
             <div id="front-content">
 
                 <div id="logo">
-                    SoMa logo
+                    <div class="logo-first">so</div><div class="logo-second">ma</div>
                 </div>
 
                 <div class="clear"></div>
@@ -77,14 +86,19 @@
             </div>
 
             <div id="right-side-widget">
-                Right Side Widget Content
+                <div class="panel panel-default">
+                    <div class="panel-heading">Hottest media</div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
             </div>
 
 	</div>
 
     <div class="clear"></div>
 
-    <footer>
+    <footer class="footer-util">
 
             <div id="credentials">
                 Credentials
