Integrated Youtube and Flickr APIs for search ( Requests and rendering )

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,12 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
+	<script src="js/oauth.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
 <body>
 
-<div class="navbar navbar-default">
+<div class="navbar navbar-default" id="top">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
             <span class="icon-bar"></span>
@@ -40,7 +41,6 @@
         </ul>
     </div>
 </div>
-
 	<div class="container">
 
             <div id="left-side-widget">
@@ -101,14 +101,14 @@
     <footer class="footer-util">
 
             <div id="credentials">
-                Credentials
+                <a href="#">About</a>
             </div>
 
             <div id="navigation-links">
-                Navigation liks
+                <a href="search-results.html">Mashup</a>
+                <a href="#top">Top</a>
             </div>
 
     </footer>
-
 </body>
 <html>
