--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -5,16 +5,16 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/search-results.css" />
-        
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/oauth.js" type="text/javascript"></script>
         <script src="js/widgets.js" type="text/javascript"></script>
-        <script src="js/twitterService.js" type="text/javascript"></script>
+        <script src="js/youtubeSearch.js" type="text/javascript"></script>
+        <script src="js/flickrSearch.js" type="text/javascript"></script>
     </head>
     <body>
 
-        <div class="navbar navbar-default">
+        <div class="navbar navbar-default" id="top">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
                     <span class="icon-bar"></span>
@@ -25,16 +25,16 @@
             </div>
             <div class="navbar-collapse collapse navbar-responsive-collapse">
 
-                <form id="search-box" class="navbar-left">
+                <div id="search-box" class="navbar-left">
                     <div class="row">
                         <div class="col-sm-10">
                             <input class="form-control" id="focusedInput" type="text" value="This is focused...">
                         </div>
                         <div class="col-sm-2">
-                            <button type="submit" class="btn btn-primary">Mash-Up</button>
+                            <button onclick="youtubeSearch(); flickrSearch();" class="btn btn-primary">Mash-Up</button>
                         </div>
                     </div>
-                </form>
+                </div>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Hello, User</a></li>
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="col-sm-4 ">
 
-                                    <div class="panel panel-default" id="tweets">
+                                    <div class="panel panel-default" id="mashup-tweets">
                                         <div class="panel-heading"><h2>Stories</h2></div>
                                     </div>
 
@@ -79,11 +79,9 @@
                                 </div>
                                 <div class="col-sm-5 ">
 
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" id="mashup-images">
                                         <div class="panel-heading"><h2>Images</h2></div>
-                                        <div class="panel-body">
-                                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                                            <br/><br/>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                                        <div class="panel-body" id="mashup-images-panel">
 
                                         </div>
 
@@ -92,11 +90,9 @@
                                 </div>
                                 <div class="col-sm-3 ">
 
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" id="mashup-videos">
                                         <div class="panel-heading"><h2>Videos</h2></div>
-                                        <div class="panel-body">
-                                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                                            <br/><br/>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                                        <div class="panel-body" id="mashup-videos-panel">
 
                                         </div>
 
@@ -155,9 +151,20 @@
                         <div class="row">
                             <div class="col-sm-9 delimiter">
 
-                                <div class="images-content more-down">
-                                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                                    <br/><br/>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <div class="row">
+                                                <div class="col-sm-11">
+                                                    <h2>Flickr</h2>
+                                                </div>
+                                                <div class="col-sm-1">
+                                                    <img src="media/flickr.png" alt="Flickr" width="45px" height="45px" style="opacity: 0.8;"/>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="panel-body" id="mashup-images-panel-tab-flickr">
+                                    </div>
+
                                 </div>
 
                             </div>
@@ -177,10 +184,29 @@
                         <div class="row">
                             <div class="col-sm-9 delimiter">
 
-                                <div class="location-content more-down">
-                                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                                    <br/><br/>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                                <div class="row">
+                                    <div class="col-sm-6 delimiter">
+                                        <div class="panel panel-default">
+                                            <div class="panel-heading">
+                                                <div class="row">
+                                                <div class="col-sm-10">
+                                                    <h2>YouTube</h2>
+                                                </div>
+                                                    <div class="col-sm-2">
+                                                    <img src="media/youtube.png" alt="Youtube" width="45px" height="45px" style="opacity: 0.8;"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="panel-body" id="mashup-videos-panel-tab-youtube">
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                    Vimeo
+                                    </div>
                                 </div>
+
 
                             </div>
                             <div class="col-sm-3">
@@ -226,14 +252,18 @@
         <footer>
 
             <div id="credentials">
-                Credentials
+                <a href="#">About</a>
             </div>
 
             <div id="navigation-links">
-                Navigation liks
+                <a href="index.html">Home</a>
+                <a href="#top">Top</a>
             </div>
 
         </footer>
 
+
+        <script src="https://labnol.googlecode.com/files/youtube.js"></script>
+        <script src="https://apis.google.com/js/client.js?onload=onClientLoad"></script>
     </body>
 </html>
