--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -11,6 +11,7 @@
         <script src="js/widgets.js" type="text/javascript"></script>
         <script src="js/youtubeSearch.js" type="text/javascript"></script>
         <script src="js/flickrSearch.js" type="text/javascript"></script>
+        <script src="js/twitterService.js" type="text/javascript"></script>
     </head>
     <body>
 
@@ -28,10 +29,10 @@
                 <div id="search-box" class="navbar-left">
                     <div class="row">
                         <div class="col-sm-10">
-                            <input class="form-control" id="focusedInput" type="text" value="This is focused...">
+                            <input class="form-control" id="focusedInput" type="text" placeholder="This is focused...">
                         </div>
                         <div class="col-sm-2">
-                            <button onclick="youtubeSearch(); flickrSearch();" class="btn btn-primary">Mash-Up</button>
+                            <button onclick="youtubeSearch(); flickrSearch(); twitterSearch();" class="btn btn-primary">Mash-Up</button>
                         </div>
                     </div>
                 </div>
@@ -73,6 +74,9 @@
 
                                     <div class="panel panel-default" id="mashup-tweets">
                                         <div class="panel-heading"><h2>Stories</h2></div>
+                                        <div class="panel-body">
+                                            <ul id="mashup-tweets-list"></ul>
+                                        </div>
                                     </div>
 
 
