Maps services integrated

--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -109,7 +109,8 @@
                         <div class="col-sm-3">
 
                             <h4>Location</h4>
-                            <img src="media/dummy-map.gif" alt="Map" width="350" height="300" />
+                            <!--<img src="media/dummy-map.gif" alt="Map" width="350" height="300" />-->
+                            <iframe src="maps.html"></iframe>
 
                         </div>
                     </div>
