--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -32,7 +32,7 @@
                             <input class="form-control" id="focusedInput" type="text" placeholder="This is focused...">
                         </div>
                         <div class="col-sm-2">
-                            <button onclick="youtubeSearch(); flickrSearch(); twitterSearch();" class="btn btn-primary">Mash-Up</button>
+                            <button onclick="youtubeSearch(); flickrSearch(); twitterSearch(); googleMapsSearch();" class="btn btn-primary">Mash-Up</button>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
 
                             <h4>Location</h4>
                             <!--<img src="media/dummy-map.gif" alt="Map" width="350" height="300" />-->
-                            <iframe src="maps.html"></iframe>
+                            <iframe id="mashup-map" src="maps.html"></iframe>
 
                         </div>
                     </div>
