--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
 	<title>SoMa</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/oauth.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
