--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,7 @@
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/oauth.js"></script>
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
@@ -65,16 +66,16 @@
                 <div class="clear"></div>
 
                 <div id="search">
-                    <form id="search-box">
+                    <div id="search-box">
                         <div class="row">
                             <div class="col-sm-10">
                                 <input class="form-control" id="focusedInput" type="text" value="This is focused...">
                              </div>
                             <div class="col-sm-2">
-                                <button type="submit" class="btn btn-primary">Mash-Up</button>
+                                <button id="showResults" class="btn btn-primary">Mash-Up</button>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
 
                 <div class="clear"></div>
