--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>SoMa</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="js/oauth.js"></script>
+    <head>
+        <title>SoMa</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <script src="js/jquery.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/oauth.js"></script>
+        <script src="js/showResults.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    </head>
+    <body>
 
-</head>
-<body>
-
-<div class="navbar navbar-default" id="top">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">soma</a>
-    </div>
-    <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="search-results.html">Mashup</a></li>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Hello, User</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
+        <div class="navbar navbar-default" id="top">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">soma</a>
+            </div>
+            <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="search-results.html">Mashup</a></li>
                 </ul>
-            </li>
-        </ul>
-    </div>
-</div>
-	<div class="container">
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Hello, User</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
 
             <div id="left-side-widget">
                 <div class="panel panel-default">
@@ -70,7 +70,7 @@
                         <div class="row">
                             <div class="col-sm-10">
                                 <input class="form-control" id="focusedInput" type="text" value="This is focused...">
-                             </div>
+                            </div>
                             <div class="col-sm-2">
                                 <button id="showResults" class="btn btn-primary">Mash-Up</button>
                             </div>
@@ -95,11 +95,11 @@
                 </div>
             </div>
 
-	</div>
+        </div>
 
-    <div class="clear"></div>
+        <div class="clear"></div>
 
-    <footer class="footer-util">
+        <footer class="footer-util">
 
             <div id="credentials">
                 <a href="#">About</a>
@@ -110,6 +110,6 @@
                 <a href="#top">Top</a>
             </div>
 
-    </footer>
-</body>
-<html>
+        </footer>
+    </body>
+    <html>
