--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -8,10 +8,13 @@
         <script src="js/jquery.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/oauth.js" type="text/javascript"></script>
-        <script src="js/widgets.js" type="text/javascript"></script>
-        <script src="js/youtubeSearch.js" type="text/javascript"></script>
+        <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+        
         <script src="js/flickrSearch.js" type="text/javascript"></script>
         <script src="js/twitterService.js" type="text/javascript"></script>
+        <script src="js/googlePlusService.js" type="text/javascript"></script>
+        <script src="js/searchResults.js" type="text/javascript"></script>
+        <script src="js/youtubeSearch.js" type="text/javascript"></script>
     </head>
     <body>
 
@@ -32,7 +35,7 @@
                             <input class="form-control" id="focusedInput" type="text" placeholder="This is focused...">
                         </div>
                         <div class="col-sm-2">
-                            <button onclick="youtubeSearch(); flickrSearch(); twitterSearch(); googleMapsSearch();" class="btn btn-primary">Mash-Up</button>
+                            <button id="mashupButton" class="btn btn-primary">Mash-Up</button>
                         </div>
                     </div>
                 </div>
