--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,6 @@
         <script src="js/oauth.js"></script>
         <script src="js/showResults.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-
     </head>
     <body>
 
@@ -27,23 +26,11 @@
                     <li><a href="search-results.html">Mashup</a></li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Hello, User</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
             </div>
         </div>
         <div class="container">
 
+            <!--
             <div id="left-side-widget">
                 <div class="panel panel-default">
                     <div class="panel-heading">Hottest stories</div>
@@ -57,6 +44,8 @@
                 </div>
             </div>
 
+            -->
+
             <div id="front-content">
 
                 <div id="logo">
@@ -69,7 +58,7 @@
                     <div id="search-box">
                         <div class="row">
                             <div class="col-sm-10">
-                                <input class="form-control" id="focusedInput" type="text" value="This is focused...">
+                                <input class="form-control" id="focusedInput" type="text" placeholder="Search...">
                             </div>
                             <div class="col-sm-2">
                                 <button id="showResults" class="btn btn-primary">Mash-Up</button>
@@ -81,12 +70,14 @@
                 <div class="clear"></div>
 
                 <div id="short-description">
-                    <p>Short Description</p>
+                    <p>Social Surfing Machine - Search for latest news on Social Media</p>
                 </div>
 
             </div>
 
+            <!--
             <div id="right-side-widget">
+                <!--
                 <div class="panel panel-default">
                     <div class="panel-heading">Hottest media</div>
                     <div class="panel-body">
@@ -94,6 +85,7 @@
                     </div>
                 </div>
             </div>
+                -->
 
         </div>
 
