--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,7 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="search-results.html">Mashup</a></li>
+                    <li><a href="user-guide.html">User Guide</a></li>
                 </ul>
 
             </div>
