--- a/public_html/search-results.html
+++ b/public_html/search-results.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>SoMa</title>
-
         <meta name="author" content="Ailenei Lucian Costin, Daniel Plecan"/>
         <meta name="keywords" content="soma, social, mashup" />
         <meta name="description" content="Social Mashup" />
@@ -20,6 +19,7 @@
         <script src="js/searchResults.js" type="text/javascript"></script>
         <script src="js/youtubeSearch.js" type="text/javascript"></script>
     </head>
+    
     <body >
 
         <div class="navbar navbar-default" id="top">
@@ -45,7 +45,9 @@
                 </div>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <img class="twitterLoginBtn" src="media/signin.png" />
+                    <li>
+                        <img id="twitterLoginBtn" src="media/signin.png" />
+                    </li>
                 </ul>
             </div>
         </div>
